# synctest

./: CMakeLists.txt  README.md  game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  main.hpp  message.hpp  network.cpp  network.hpp  runner.cpp  runner.hpp  widgets.cpp  widgets.hpp
stb/: compile.c
